# Data-Analysis-with-Pandas

./: README.md  bike_stats.ipynb  pyproject.toml  vg-stats.ipynb
.ipynb_checkpoints/: README-checkpoint.md  chess_board-checkpoint.ipynb  vg-stats-checkpoint.ipynb
